--- a/authors.tex
+++ b/authors.tex
@@ -1,141 +1,144 @@
 \iflatexml
-Anisha Keshavan\footnote[1]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA},
-Friedmann Paul\footnote[2]{Charite Universitatsmedizin, Germany},
-Mona K. Beyer\footnote[3]{Department of Neurology, Oslo University Hospital and University of Oslo},
-Alyssa H. Zhu\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
-Nico Papinutto\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
-Russel Shinohara\footnote[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
-William Stern\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
-%alphabetical
-Michael Amann\footnote[6]{University Hospital, Basel, Switzerland},
-Rohit Bakshi\footnote[7]{Brigham and Women's Hospital, MA, United States},
-Antje Bischof\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
-Alessandro Carriero\footnote[8]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy},
-Manuel Comabella\footnote[9]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
-Jason C. Crane\footnote[10]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA},
-Sandra D’Alfonso\footnote[11]{Eastern Piedmont University, Novara, Italy},
-Benedicte Dubois\footnote[12]{KU Leuven, Leuven, Belgium}
-Massimo Filippi\footnote[13]{Scientific Institute Ospedale San Raffaele, Italy}
-Bertrand Fontaine\footnote[14]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP:  
-Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013  
-Paris, France.}
-Ann Goris\footnote[12]{KU Leuven, Leuven, Belgium}
-Laura Gaetano\footnote[6]{University Hospital, Basel, Switzerland},
-Sergiu Groppa\footnote[15]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
-David Hafler\footnote[16]{Yale University, CT, United States}
-Hanne F. Harbo\footnote[3]{Department of Neurology, Oslo University Hospital and University of Oslo},
-Bernhard Hemmer\footnote[17]{Technische Universität München, Munich, Germany}
-Kesshi Jordan\footnote[1]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA},
-Ludwig Kappos\footnote[6]{University Hospital, Basel, Switzerland}
-Gina Kirkish\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
-Sara Llufriu\footnote[18]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-Stefano Magon\footnote[6]{University Hospital, Basel, Switzerland},
-Filippo Martinelli-Boneschi\footnote[13]{Scientific Institute Ospedale San Raffaele, Italy}
-Jacob McCauley\footnote[19]{University of Miami, Miami, USA}
-Xavier Montalban\footnote[9]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
-Mark Muhlau\footnote[17]{Technische Universität München, Munich, Germany}
-Daniel Pelletier\footnote[16]{Yale University, CT, United States}
-Margaret Pericak-Vance\footnote[19]{University of Miami, Miami, USA}
-Isabelle Rebeix\footnote[14]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP:  
-Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013  
-Paris, France.}
-Maria Rocca\footnote[13]{Scientific Institute Ospedale San Raffaele, Italy}
-Alex Rovira\footnote[9]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain},
-Regina Schlaeger\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
-Albert Saiz\footnote[18]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-Till Sprenger\footnote[6]{University Hospital, Basel, Switzerland},
-Alessandro Stecco\footnote[20]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100},
-Bernard Uitdehaag\footnote[21]{Academic Hospital Vrije Universiteit, Netherlands},
-Pablo Villoslada\footnote[18]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain},
-Mike Wattjes\footnote[21]{Academic Hospital Vrije Universiteit, Netherlands},
-Howard Weiner\footnote[7]{Brigham and Women's Hospital, MA, United States},
-Jens Wurfel\footnote[2]{Charite Universitatsmedizin, Germany},
-Claus Zimmer\footnote[22]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-Frauke Zipp\footnote[15]{Klinik und Poliklinik für Neurologie, Mainz, Germany},
-%last and not alphabetical
-International Multiple Sclerosis Genetics Consortium,
-Stephen Hauser\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
-Jorge Oksenberg\footnote[4]{Department of Neurology, University California, San Francisco,  USA},
-Roland Henry\footnote[1,4,10]{UC Berkeley - UCSF Graduate Program in Bioengineering,  & Department of Neurology, University California San Francisco & Department of Radiology and Biomedical Imaging, University California San Francisco, USA}
+\author{Anisha Keshavan}\footnote[1,2]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
+\author{Friedemann Paul}\footnote[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
+\author{Mona K. Beyer}\footnote[4]{Department of Radiology and Nuclear Medicine, Oslo University Hospital, Oslo, Norway}
+\author{Alyssa H. Zhu}\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
+\author{Nico Papinutto}\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
+\author{Russell Shinohara}\footnote[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
+\author{William Stern}\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
+\author{Michael Amann}\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
+\author{Rohit Bakshi}\footnote[7]{Brigham and Women's Hospital, MA, United States}
+\author{Antje Bischof}\footnote[1,6,8]{Department of Neurology, University California, San Francisco,  USA,Department of Neurology, Basel University Hospital, Basel, Switzerland,Clinical Immunology, University Hospital Basel, Switzerland}
+\author{Alessandro Carriero}\footnote[9]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy}
+\author{Manuel Comabella}\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
+\author{Jason C. Crane}\footnote[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
+\author{Sandra D’Alfonso}\footnote[12]{Eastern Piedmont University, Novara, Italy}
+\author{Benedicte Dubois}\footnote[13]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
+\author{Massimo Filippi}\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
+\author{Bertrand Fontaine}\footnote[15]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
+\author{An Goris}\footnote[13]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
+\author{Laura Gaetano}\footnote[6,16]{Department of Neurology, Basel University Hospital, Basel, Switzerland,Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
+\author{Sergiu Groppa}\footnote[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
+\author{David A. Hafler}\footnote[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
+\author{Hanne F. Harbo}\footnote[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
+\author{Bernhard Hemmer}\footnote[19,20]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München,, Munich, Germany,Munich Cluster of Systems Neurology (SyNery)}
+\author{Kesshi Jordan}\footnote[1,2]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
+\author{Ludwig Kappos}\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
+\author{Gina Kirkish}\footnote[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
+\author{Sara Llufriu}\footnote[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+\author{Stefano Magon}\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
+\author{Filippo Martinelli-Boneschi}\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
+\author{Jacob McCauley}\footnote[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+\author{Xavier Montalban}\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
+\author{Mark Muhlau}\footnote[23,24]{Dept. of Neurology, Klinikum rechts der Isar, Technische Universität München,TUM–Neuroimaging Center, Technische Universität München, Germany}
+\author{Daniel Pelletier}\footnote[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
+\author{Fred Pattany}\footnote[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+\author{Margaret Pericak-Vance}\footnote[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+\author{Isabelle Rebeix}\footnote[15]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
+\author{Maria Rocca}\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
+\author{Alex Rovira}\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
+\author{Regina Schlaeger}\footnote[1,6,8]{Department of Neurology, University California, San Francisco,  USA,Department of Neurology, Basel University Hospital, Basel, Switzerland,Clinical Immunology, University Hospital Basel, Switzerland}
+\author{Albert Saiz}\footnote[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+\author{Till Sprenger}\footnote[6,25]{Department of Neurology, Basel University Hospital, Basel, Switzerland,DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
+\author{Alessandro Stecco}\footnote[26]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
+\author{Bernard M.J. Uitdehaag}\footnote[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
+\author{Pablo Villoslada}\footnote[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+\author{Mike P. Wattjes}\footnote[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
+\author{Howard Weiner}\footnote[7]{Brigham and Women's Hospital, MA, United States}
+\author{Jens Wuerfel}\footnote[3,28]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.,Medical Image Analysis Center Basel, Switzerland}
+\author{Claus Zimmer}\footnote[29]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+\author{Frauke Zipp}\footnote[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
+\author{International Multiple Sclerosis Genetics Consortium}\footnote[30]{International Multiple Sclerosis Genetics Consortium}
+\author{Stephen Hauser}\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
+\author{Jorge R. Oksenberg}\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
+\author{Roland G. Henry}\footnote[1,2,11]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA,Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
 
 \else % PDF export commands go here
-\author[1]{Anisha Keshavan}
-\author[2]{Friedemann Paul}
-\author[3]{Mona K. Beyer}
-\author[4]{Alyssa Zhu}
-\author[4]{Nico Papinutto}
-\author[5]{Russell Shinohara}
-\author[4]{William Stern}
-%alphabetical
-\author[6]{Michael Aman}
-\author[7]{Rohit Bakshi}
-\author[4,6,23]{Antje Bischof}
-\author[8] {Alessandro Carriero}
-\author[9]{Manuel Comabella}
-\author[10]{Jason C. Crane}
-\author[11]{Sandra D’Alfonso}
-\author[12]{Benedicte Dubois}
-\author[13]{Massimo Filippi}
-\author[14]{Bertrand Fontaine}
-\author[12]{Ann Goris}
-\author[6]{Laura Gaetano}
-\author[15]{Sergiu Groppa}
-\author[16]{David Hafler}
-\author[3]{Hanne F. Harbo}
-\author[17]{Bernhard Hemmer}
-\author[1]{Kesshi Jordan}
-\author[6]{Ludwig Kappos}
-\author[4]{Gina Kirkish}
-\author[18]{Sara Llufriu}
-\author[6]{Stefano Magon}
-\author[13]{Filippo Martinelli-Boneschi}
-\author[19]{Jacob McCauley}
-\author[9]{Xavier Montalban}
-\author[17]{Mark Muhlau}
-\author[16]{Daniel Pelletier} %somewhere else
-\author[19]{Margaret Pericak-Vance}
-\author[14]{Isabelle Rebeix}
-\author[13]{Maria Rocca}
-\author[9]{Alex Rovira}
-\author[4]{Regina Schlaeger}
-\author[17]{Albert Saiz}
-\author[6]{Till Sprenger} %somewhere else
-\author[20]{Alessandro Stecco}
-\author[21]{Bernard Uitdehaag}
-\author[18]{Pablo Villoslada}
-\author[21]{Mike Wattjes}
-\author[7]{Howard Weiner}
-\author[2]{Jens Wurfel}
-\author[17]{Claus Zimmer}
-\author[15]{Frauke Zipp}
-%last and not alphabetical
-\author[22]{International Multiple Sclerosis Genetics Consortium}
-\author[4]{Stephen Hauser}
-\author[4]{Jorge Oksenberg}
-\author[1,4,10]{Roland G. Henry}
 
-\affil[1]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA} 
-\affil[2]{Charite Universitatsmedizin, Berlin, Germany}
-\affil[3]{Department of Neurology, Oslo University Hospital and University of Oslo, Oslo, Norway}
-\affil[4]{Department of Neurology, University California, San Francisco,  USA}
+\author[1,2]{Anisha Keshavan}
+\author[3]{Friedemann Paul}
+\author[4]{Mona K. Beyer}
+\author[1]{Alyssa H. Zhu}
+\author[1]{Nico Papinutto}
+\author[5]{Russell Shinohara}
+\author[1]{William Stern}
+\author[6]{Michael Amann}
+\author[7]{Rohit Bakshi}
+\author[1,6,8]{Antje Bischof}
+\author[9]{Alessandro Carriero}
+\author[10]{Manuel Comabella}
+\author[11]{Jason C. Crane}
+\author[12]{Sandra D’Alfonso}
+\author[13]{Benedicte Dubois}
+\author[14]{Massimo Filippi}
+\author[15]{Bertrand Fontaine}
+\author[13]{An Goris}
+\author[6,16]{Laura Gaetano}
+\author[17]{Sergiu Groppa}
+\author[18]{David A. Hafler}
+\author[3]{Hanne F. Harbo}
+\author[19,20]{Bernhard Hemmer}
+\author[1,2]{Kesshi Jordan}
+\author[6]{Ludwig Kappos}
+\author[11]{Gina Kirkish}
+\author[21]{Sara Llufriu}
+\author[6]{Stefano Magon}
+\author[14]{Filippo Martinelli-Boneschi}
+\author[22]{Jacob McCauley}
+\author[10]{Xavier Montalban}
+\author[23,24]{Mark Muhlau}
+\author[18]{Daniel Pelletier}
+\author[22]{Fred Pattany}
+\author[22]{Margaret Pericak-Vance}
+\author[15]{Isabelle Rebeix}
+\author[14]{Maria Rocca}
+\author[10]{Alex Rovira}
+\author[1,6,8]{Regina Schlaeger}
+\author[21]{Albert Saiz}
+\author[6,25]{Till Sprenger}
+\author[26]{Alessandro Stecco}
+\author[27]{Bernard M.J. Uitdehaag}
+\author[21]{Pablo Villoslada}
+\author[27]{Mike P. Wattjes}
+\author[7]{Howard Weiner}
+\author[3,28]{Jens Wuerfel}
+\author[29]{Claus Zimmer}
+\author[17]{Frauke Zipp}
+\author[30]{International Multiple Sclerosis Genetics Consortium}
+\author[1]{Stephen Hauser}
+\author[1]{Jorge R. Oksenberg}
+\author[1,2,11]{Roland G. Henry}
+
+
+\affil[9]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy}
+\affil[30]{International Multiple Sclerosis Genetics Consortium}
+\affil[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
+\affil[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
+\affil[16]{Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
+\affil[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+\affil[28]{Medical Image Analysis Center Basel, Switzerland}
+\affil[25]{DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
+\affil[19]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München,, Munich, Germany}
+\affil[4]{Department of Radiology and Nuclear Medicine, Oslo University Hospital, Oslo, Norway}
+\affil[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
+\affil[24]{TUM–Neuroimaging Center, Technische Universität München, Germany}
+\affil[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+\affil[26]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
+\affil[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
+\affil[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
+\affil[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
+\affil[23]{Dept. of Neurology, Klinikum rechts der Isar, Technische Universität München}
+\affil[20]{Munich Cluster of Systems Neurology (SyNery)}
+\affil[2]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
+\affil[12]{Eastern Piedmont University, Novara, Italy}
+\affil[29]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+\affil[15]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
+\affil[13]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
 \affil[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
-\affil[6]{Department of Neurology, University Hospital, Basel, Switzerland}
+\affil[8]{Clinical Immunology, University Hospital Basel, Switzerland}
 \affil[7]{Brigham and Women's Hospital, MA, United States}
-\affil[8]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy}
-\affil[9]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
-\affil[10]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
-\affil[11]{Eastern Piedmont University, Novara, Italy}
-\affil[12]{KU Leuven, Leuven, Belgium}
-\affil[13]{Scientific Institute Ospedale San Raffaele, Italy}
-\affil[14]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
-\affil[15]{Klinik und Poliklinik für Neurologie, Mainz, Germany}
-\affil[16]{Yale University, CT, United States}
-\affil[17]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-\affil[18]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-\affil[19]{University of Miami, Miami, USA}
-\affil[20]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
-\affil[21]{Academic Hospital Vrije Universiteit, Netherlands}
-\affil[22]{International Multiple Sclerosis Genetics Consortium}
-\affil[23]{Clinical Immunology, University Hospital Basel, Switzerland}
+\affil[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
+\affil[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
+\affil[1]{Department of Neurology, University California, San Francisco,  USA}
 
 \fi
