--- a/authors.tex
+++ b/authors.tex
@@ -1,5 +1,5 @@
 \iflatexml
-\author{Anisha Keshavan}\footnote[1,2]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
+Anisha Keshavan\footnote[1,2]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
 \author{Friedemann Paul}\footnote[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
 \author{Mona K. Beyer}\footnote[4]{Department of Radiology and Nuclear Medicine, Oslo University Hospital, Oslo, Norway}
 \author{Alyssa H. Zhu}\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
