--- a/authors.tex
+++ b/authors.tex
@@ -1,57 +1,57 @@
 \iflatexml
 Anisha Keshavan\footnote[1,2]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
-\author{Friedemann Paul}\footnote[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
-\author{Mona K. Beyer}\footnote[4]{Department of Radiology and Nuclear Medicine, Oslo University Hospital, Oslo, Norway}
-\author{Alyssa H. Zhu}\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
-\author{Nico Papinutto}\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
-\author{Russell Shinohara}\footnote[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
-\author{William Stern}\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
-\author{Michael Amann}\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
-\author{Rohit Bakshi}\footnote[7]{Brigham and Women's Hospital, MA, United States}
-\author{Antje Bischof}\footnote[1,6,8]{Department of Neurology, University California, San Francisco,  USA,Department of Neurology, Basel University Hospital, Basel, Switzerland,Clinical Immunology, University Hospital Basel, Switzerland}
-\author{Alessandro Carriero}\footnote[9]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy}
-\author{Manuel Comabella}\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
-\author{Jason C. Crane}\footnote[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
-\author{Sandra D’Alfonso}\footnote[12]{Eastern Piedmont University, Novara, Italy}
-\author{Benedicte Dubois}\footnote[13]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
-\author{Massimo Filippi}\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
-\author{Bertrand Fontaine}\footnote[15]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
-\author{An Goris}\footnote[13]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
-\author{Laura Gaetano}\footnote[6,16]{Department of Neurology, Basel University Hospital, Basel, Switzerland,Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
-\author{Sergiu Groppa}\footnote[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
-\author{David A. Hafler}\footnote[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
-\author{Hanne F. Harbo}\footnote[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
-\author{Bernhard Hemmer}\footnote[19,20]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München,, Munich, Germany,Munich Cluster of Systems Neurology (SyNery)}
-\author{Kesshi Jordan}\footnote[1,2]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
-\author{Ludwig Kappos}\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
-\author{Gina Kirkish}\footnote[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
-\author{Sara Llufriu}\footnote[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-\author{Stefano Magon}\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
-\author{Filippo Martinelli-Boneschi}\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
-\author{Jacob McCauley}\footnote[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
-\author{Xavier Montalban}\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
-\author{Mark Muhlau}\footnote[23,24]{Dept. of Neurology, Klinikum rechts der Isar, Technische Universität München,TUM–Neuroimaging Center, Technische Universität München, Germany}
-\author{Daniel Pelletier}\footnote[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
-\author{Fred Pattany}\footnote[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
-\author{Margaret Pericak-Vance}\footnote[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
-\author{Isabelle Rebeix}\footnote[15]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
-\author{Maria Rocca}\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
-\author{Alex Rovira}\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
-\author{Regina Schlaeger}\footnote[1,6,8]{Department of Neurology, University California, San Francisco,  USA,Department of Neurology, Basel University Hospital, Basel, Switzerland,Clinical Immunology, University Hospital Basel, Switzerland}
-\author{Albert Saiz}\footnote[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-\author{Till Sprenger}\footnote[6,25]{Department of Neurology, Basel University Hospital, Basel, Switzerland,DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
-\author{Alessandro Stecco}\footnote[26]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
-\author{Bernard M.J. Uitdehaag}\footnote[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
-\author{Pablo Villoslada}\footnote[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-\author{Mike P. Wattjes}\footnote[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
-\author{Howard Weiner}\footnote[7]{Brigham and Women's Hospital, MA, United States}
-\author{Jens Wuerfel}\footnote[3,28]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.,Medical Image Analysis Center Basel, Switzerland}
-\author{Claus Zimmer}\footnote[29]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-\author{Frauke Zipp}\footnote[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
-\author{International Multiple Sclerosis Genetics Consortium}\footnote[30]{International Multiple Sclerosis Genetics Consortium}
-\author{Stephen Hauser}\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
-\author{Jorge R. Oksenberg}\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
-\author{Roland G. Henry}\footnote[1,2,11]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA,Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
+Friedemann Paul\footnote[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
+Mona K. Beyer\footnote[4]{Department of Radiology and Nuclear Medicine, Oslo University Hospital, Oslo, Norway}
+Alyssa H. Zhu\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
+Nico Papinutto\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
+Russell Shinohara\footnote[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
+William Stern\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
+Michael Amann\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
+Rohit Bakshi\footnote[7]{Brigham and Women's Hospital, MA, United States}
+Antje Bischof\footnote[1,6,8]{Department of Neurology, University California, San Francisco,  USA,Department of Neurology, Basel University Hospital, Basel, Switzerland,Clinical Immunology, University Hospital Basel, Switzerland}
+Alessandro Carriero\footnote[9]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy}
+Manuel Comabella\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
+Jason C. Crane\footnote[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
+Sandra D’Alfonso\footnote[12]{Eastern Piedmont University, Novara, Italy}
+Benedicte Dubois\footnote[13]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
+Massimo Filippi\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
+Bertrand Fontaine\footnote[15]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
+An Goris\footnote[13]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
+Laura Gaetano\footnote[6,16]{Department of Neurology, Basel University Hospital, Basel, Switzerland,Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
+Sergiu Groppa\footnote[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
+David A. Hafler\footnote[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
+Hanne F. Harbo\footnote[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
+Bernhard Hemmer\footnote[19,20]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München,, Munich, Germany,Munich Cluster of Systems Neurology (SyNery)}
+Kesshi Jordan\footnote[1,2]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
+Ludwig Kappos\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
+Gina Kirkish\footnote[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
+Sara Llufriu\footnote[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+Stefano Magon\footnote[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
+Filippo Martinelli-Boneschi\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
+Jacob McCauley\footnote[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+Xavier Montalban\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
+Mark Muhlau\footnote[23,24]{Dept. of Neurology, Klinikum rechts der Isar, Technische Universität München,TUM–Neuroimaging Center, Technische Universität München, Germany}
+Daniel Pelletier\footnote[18]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
+Fred Pattany\footnote[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+Margaret Pericak-Vance\footnote[22]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+Isabelle Rebeix\footnote[15]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
+Maria Rocca\footnote[14]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
+Alex Rovira\footnote[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
+Regina Schlaeger\footnote[1,6,8]{Department of Neurology, University California, San Francisco,  USA,Department of Neurology, Basel University Hospital, Basel, Switzerland,Clinical Immunology, University Hospital Basel, Switzerland}
+Albert Saiz\footnote[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+Till Sprenger\footnote[6,25]{Department of Neurology, Basel University Hospital, Basel, Switzerland,DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
+Alessandro Stecco\footnote[26]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
+Bernard M.J. Uitdehaag\footnote[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
+Pablo Villoslada\footnote[21]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+Mike P. Wattjes\footnote[27]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
+Howard Weiner\footnote[7]{Brigham and Women's Hospital, MA, United States}
+Jens Wuerfel\footnote[3,28]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.,Medical Image Analysis Center Basel, Switzerland}
+Claus Zimmer\footnote[29]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+Frauke Zipp\footnote[17]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
+International Multiple Sclerosis Genetics Consortium\footnote[30]{International Multiple Sclerosis Genetics Consortium}
+Stephen Hauser\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
+Jorge R. Oksenberg\footnote[1]{Department of Neurology, University California, San Francisco,  USA}
+Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California, San Francisco,  USA,UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA,Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
 
 \else % PDF export commands go here
 
